--- a/config.json
+++ b/config.json
@@ -5,12 +5,5 @@
   "secure": false,
   "user": "577a5551e722a5",
   "pass": "0a173887650a4d",
-  "rejectUnauthorized": false,
-  "services": {
-    "mailtrap": {
-      "host": "smtp.mailtrap.io",
-      "ports": [2525],
-      "secure": [false]
-    }
-  }
+  "rejectUnauthorized": false
 }
