--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "morgan": "^1.9.0",
+    "morgan-body": "^2.0.2",
     "nodemailer": "^4.4.0",
     "nodemailer-ses-transport": "^1.5.1",
-    "swagpi": "^0.1.1",
+    "swagger-ui-express": "^2.0.11",
     "winston": "^2.4.0"
   },
   "engines": {
