--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Jonathan Chiocchio",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "camelcase": "^4.1.0",
     "express": "^4.15.3",
     "morgan": "^1.9.0",
     "morgan-body": "^2.0.2",
