--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.17.2",
     "camelcase": "^4.1.0",
     "express": "^4.15.3",
+    "lodash": "^4.17.4",
     "morgan": "^1.9.0",
     "morgan-body": "^2.0.2",
     "nodemailer": "^4.4.0",
